# pokeclone

./: Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: deploy-wasm.yml
assets/: attacks.json
assets/aseprite/: aqualet.aseprite  chaterre.aseprite  flammiaou.aseprite  hirondflamme.aseprite  matoulot.aseprite  myworld.aseprite  prism.ase
assets/creatures/: attacks.json  gen1.json
assets/ldtk/: animated.ldtk  map.ldtk  map_small.ldtk  map_small_noplayer.ldtk  mymap.ldtk  test.ldtk  world.ldtk
assets/saves/: save.json
assets/wasm/: index.html
docs/: fights.md  taming.md
src/: animation.rs  appstate.rs  camera.rs  creature.rs  event.rs  fight.rs  index.rs  main.rs  player.rs  save.rs  team.rs  world.rs
src/character/: mod.rs
src/character_manual/: animation.rs  mod.rs  player.rs
src/dex/: attacks.rs  element.rs  mod.rs  species.rs
src/player/: components.rs  mod.rs  systems.rs
src/save/: components.rs  mod.rs
src/ui/: fight.rs  game.rs  index.rs  main_menu.rs  mod.rs  widgets.rs
src/utils/: ldtk.rs  mod.rs
src/world/: mod.rs
src/world/goals/: components.rs  mod.rs  systems.rs
src/world/herbs/: components.rs  mod.rs  systems.rs
src/world/npcs/: components.rs  mod.rs  systems.rs
src/world/signs/: components.rs  mod.rs  systems.rs
src/world/walls/: components.rs  mod.rs  systems.rs
