[package]
name = "pokeclone"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "flac", "gif"] }
bevy-inspector-egui = "0.33.1"
# bevy = { version = "0.16.1", features = ["flac", "gif"] }
bevy_ecs_ldtk = "0.12.0"
bevy_egui = "0.36.0"
egui_extras = { version = "0.32.1", features = ["all_loaders"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3.77", features = ["Storage", "Window"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
